--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".app.ProfileActivity"
+            android:name=".app.HubActivity"
             android:label="@string/title_activity_profile" />
         <activity android:name=".setup.RegisterActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"/>
